refactor(core/colors): update theme

--- a/packages/core/scss/theme/classic-dark/_variables.scss
+++ b/packages/core/scss/theme/classic-dark/_variables.scss
@@ -687,5 +687,135 @@ $classic-dark: (
     datepicker-time-header--color: rgba(255, 255, 255, 0.85),
     datepicker-cw--color: rgba(255, 255, 255, 0.6),
     datepicker-separator--background: rgba(235, 240, 245, 0.15),
+    tootlip--background: #10181c,
+    tooltip--border-color: rgba(235, 240, 245, 0.15),
+    color-dynamic: #27d9d9,
+    tooltip-close--color: rgba(255, 255, 255, 0.6),
+    tooltip-close-btn--background: rgba(0, 0, 0, 0),
+    tooltip-close-btn--background--hover: rgba(255, 255, 255, 0.07),
+    tooltip-close-btn--background--active: rgba(255, 255, 255, 0.14),
+    tooltip--color: rgba(255, 255, 255, 0.85),
+    color-hyperlink: #41aaaa,
+    color-hyperlink--hover: #41aaaa,
+    color-hyperlink--active: #fff,
+    color-ghost--hover: rgba(255, 255, 255, 0.07),
+    color-ghost--active: rgba(255, 255, 255, 0.14),
+    toast--background: #10181c,
+    toast--border-color: rgba(235, 240, 245, 0.15),
+    toast--color: rgba(255, 255, 255, 0.85),
+    toast-timer-track--background: rgba(255, 255, 255, 0),
+    toast-timer-value--background: #6e7d89,
+    tree-item--background: rgba(0, 0, 0, 0),
+    tree-item--background--hover: rgba(255, 255, 255, 0.07),
+    tree-item--background--active: rgba(255, 255, 255, 0.14),
+    tree-item--background--selected: rgba(50, 160, 160, 0.25),
+    tree-item--background--selected-hover: rgba(97, 182, 182, 0.3),
+    tree-item--background--selected-active: rgba(131, 197, 197, 0.36),
+    tree-item-node-closed-icon--color: rgba(255, 255, 255, 0.85),
+    tree-item-node-open-icon--color: #41aaaa,
+    tree-item--color: rgba(255, 255, 255, 0.85),
+    tree-item-icon--color: rgba(255, 255, 255, 0.85),
+    tree-item-status--color: rgba(255, 255, 255, 0.6),
+    table--background: rgba(0, 0, 0, 0),
+    table--border-color: rgba(235, 240, 245, 0.15),
+    table--color: rgba(255, 255, 255, 0.85),
+    table-header-row--background: rgba(51, 74, 85, 0.2),
+    table-header-row--border-color: rgba(235, 240, 245, 0.15),
+    table-selection--border-color: #41aaaa,
+    table-header-cell--background: rgba(0, 0, 0, 0),
+    table-header-cell--background--hover: rgba(255, 255, 255, 0.07),
+    table-header-cell--background--active: rgba(255, 255, 255, 0.14),
+    table-header-cell--border-color: rgba(0, 0, 0, 0),
+    table-header-cell--border-color--hover: rgba(0, 0, 0, 0),
+    table-header-cell--border-color--active: rgba(0, 0, 0, 0),
+    table-header-cell--color: rgba(255, 255, 255, 0.85),
+    table-header-sort--color: #41aaaa,
+    table-header-filter--color: #41aaaa,
+    table-header-splitter--background: rgba(235, 240, 245, 0.4),
+    table-header-splitter--background--hover: #41aaaa,
+    table-group-splitter--background: rgba(235, 240, 245, 0.15),
+    table-group-splitter--background--hover: rgba(65, 170, 170, 0.85),
+    table-data-row--background: rgba(0, 0, 0, 0),
+    table-data-row--background--hover: rgba(255, 255, 255, 0.07),
+    table-data-row--background--active: rgba(255, 255, 255, 0.14),
+    table-data-row--background--selected: rgba(50, 160, 160, 0.25),
+    table-data-row--background--disabled: rgba(0, 0, 0, 0),
+    table-data-row--background--selected-hover: rgba(97, 182, 182, 0.3),
+    table-data-row--background--selected-active: rgba(131, 197, 197, 0.36),
+    table-data-row-alt--background: rgba(255, 255, 255, 0.04),
+    table-data-row-alt--background--hover: rgba(255, 255, 255, 0.11),
+    table-data-row-alt--background--active: rgba(255, 255, 255, 0.17),
+    table-data-row-alt--background--selected: rgba(79, 174, 174, 0.28),
+    table-data-row-alt--background--disabled: rgba(255, 255, 255, 0.04),
+    table-data-row-alt--background--selected-hover: rgba(116, 191, 191, 0.33),
+    table-data-row-alt--background--selected-active: rgba(144, 204, 204, 0.38),
+    table-data-row--border-color: rgba(235, 240, 245, 0.15),
+    table-data-cell--background: rgba(0, 0, 0, 0),
+    table-data-cell--background--hover: rgba(255, 255, 255, 0.07),
+    table-data-cell--background--active: rgba(255, 255, 255, 0.14),
+    table-data-cell--background--selected: rgba(50, 160, 160, 0.25),
+    table-data-cell--background--disabled: rgba(0, 0, 0, 0),
+    table-data-cell--background--selected-hover: rgba(97, 182, 182, 0.3),
+    table-data-cell--background--selected-active: rgba(131, 197, 197, 0.36),
+    table-data-cell--border-color: rgba(0, 0, 0, 0),
+    table-data-cell--color: rgba(255, 255, 255, 0.85),
+    table-data-cell--color-disabled: rgba(255, 255, 255, 0.4),
+    table-group-header-row--background: rgba(51, 74, 85, 0.2),
+    table-group-header-row--border-color: rgba(235, 240, 245, 0.15),
+    label--color: rgba(255, 255, 255, 0.6),
+    label--color--hover: rgba(255, 255, 255, 0.85),
+    label--color--active: rgba(255, 255, 255, 0.85),
+    label--color--focus: rgba(255, 255, 255, 0.85),
+    label--color--disabled: rgba(255, 255, 255, 0.4),
+    workflow-step--background: rgba(255, 255, 255, 0),
+    workflow-step--background--hover: rgba(255, 255, 255, 0.07),
+    workflow-step--background--active: rgba(255, 255, 255, 0.14),
+    workflow-step--background--selected: rgba(50, 160, 160, 0.25),
+    workflow-step--background--disabled: rgba(0, 0, 0, 0),
+    workflow-step--color: rgba(255, 255, 255, 0.85),
+    workflow-step-icon--background: #10181c,
+    workflow-step-icon-default--color: #879baa,
+    workflow-step-icon-default--color--selected: #41aaaa,
+    workflow-step-icon-default--color--disabled: rgba(255, 255, 255, 0.4),
+    workflow-step-icon-done--color: #41aaaa,
+    workflow-step-icon-done--color--selected: #41aaaa,
+    workflow-step-icon-done--color--disabled: rgba(255, 255, 255, 0.4),
+    workflow-step-icon-success--color--disabled: rgba(255, 255, 255, 0.4),
+    workflow-step-icon-warning--color--disabled: rgba(255, 255, 255, 0.4),
+    workflow-step-icon-error--color--disabled: rgba(255, 255, 255, 0.4),
+    chart-1: #00ebd5,
+    chart-1-40: rgba(0, 235, 213, 0.4),
+    chart-2-40: rgba(0, 215, 160, 0.4),
+    chart-2: #009e78,
+    chart-3-40: rgba(0, 213, 224, 0.4),
+    chart-3: #00d5e0,
+    chart-4-40: rgba(0, 197, 241, 0.4),
+    chart-4: #00c5f1,
+    chart-5-40: rgba(134, 172, 192, 0.4),
+    chart-5: #86acc0,
+    chart-6-40: rgba(66, 170, 255, 0.4),
+    chart-6: #42aaff,
+    chart-7-40: rgba(36, 115, 255, 0.4),
+    chart-7: #2473ff,
+    chart-8-40: rgba(117, 158, 255, 0.4),
+    chart-8: #759eff,
+    chart-9-40: rgba(126, 132, 255, 0.4),
+    chart-9: #7e84ff,
+    chart-10-40: rgba(147, 98, 255, 0.4),
+    chart-10: #9362ff,
+    chart-11-40: rgba(189, 97, 255, 0.4),
+    chart-11: #bd61ff,
+    chart-12-40: rgba(228, 70, 255, 0.4),
+    chart-12: #e446ff,
+    chart-13-40: rgba(243, 143, 194, 0.4),
+    chart-13: #f38fc2,
+    chart-14-40: rgba(239, 154, 154, 0.4),
+    chart-14: #ef9a9a,
+    chart-15-40: rgba(255, 177, 128, 0.4),
+    chart-15: #ffb180,
+    chart-16-40: rgba(186, 186, 157, 0.4),
+    chart-16: #baba9d,
+    chart-17-40: rgba(181, 189, 0, 0.4),
+    chart-17: #b5bd00,
 
 );
