--- a/packages/core/scss/theme/classic-light/_variables.scss
+++ b/packages/core/scss/theme/classic-light/_variables.scss
@@ -58,7 +58,7 @@ $classic-light: (
     btn-primary--color--disabled: rgba(255, 255, 255, 0.85),
     btn-invisible-secondary--background--hover: rgba(0, 0, 0, 0.05),
     btn-secondary--color--disabled: rgba(0, 0, 0, 0.3),
-    btn-invisible-secondary--color: rgba(0, 0, 40, 0.65),
+    btn-invisible-secondary--color: rgba(0, 0, 0, 0.75),
     btn-outline-primary--background--hover: #f2f2f2,
     btn-invisible-secondary--color--selected-active: #0e777c,
     link-btn--border-color--visited: rgba(0, 0, 0, 0),
@@ -343,6 +343,7 @@ $classic-light: (
     chip-primary-outline--color--display: rgba(0, 0, 0, 0.75),
     app-header-logo--color: #fff,
     btn-group-item--border-color--selected: rgba(0, 0, 0, 0),
+    table-data-row-alt--background: rgba(0, 45, 74, 0.03),
     menu-header--color: rgba(0, 0, 0, 0.6),
     menu-item--background: rgba(255, 255, 255, 0),
     menu-item--background--hover: rgba(0, 0, 0, 0.05),
@@ -374,17 +375,17 @@ $classic-light: (
     select-list-item--color--hover: rgba(0, 0, 0, 0.75),
     select-list-item--color--active: rgba(0, 0, 0, 0.75),
     select-list-item--color--selected: rgba(0, 0, 0, 0.75),
-    select-list-item--color--disabled: rgba(0, 0, 40, 0.4),
+    select-list-item--color--disabled: rgba(0, 0, 0, 0.3),
     select-list-item--background--selected-hover: rgba(16, 112, 112, 0.25),
     select-list-item--background--selected-active: rgba(15, 97, 97, 0.3),
     select-list-item--background--selected-disabled: rgba(255, 255, 255, 0),
     select-list-item--color--selected-hover: rgba(0, 0, 0, 0.75),
     select-list-item--color--selected-active: rgba(0, 0, 0, 0.75),
-    select-list-item--color--selected-disabled: rgba(0, 0, 40, 0.4),
+    select-list-item--color--selected-disabled: rgba(0, 0, 0, 0.3),
     select-list-item-check--color: rgba(0, 0, 0, 0.75),
     select-list-item-check--color--hover: rgba(0, 0, 0, 0.75),
     select-list-item-check--color--active: rgba(0, 0, 0, 0.75),
-    select-list-item-check--color--disabled: rgba(0, 0, 0, 0.4),
+    select-list-item-check--color--disabled: rgba(0, 0, 0, 0.3),
     menu-item-icon--color: rgba(0, 0, 0, 0.75),
     menu-item-icon--color--hover: rgba(0, 0, 0, 0.75),
     menu-item-icon--color--active: rgba(0, 0, 0, 0.75),
@@ -688,6 +689,135 @@ $classic-light: (
     datepicker-time-header--color: rgba(0, 0, 0, 0.75),
     datepicker-cw--color: rgba(0, 0, 0, 0.55),
     datepicker-separator--background: rgba(23, 33, 38, 0.15),
+    color-4: #dfe6ed,
+    tootlip--background: #fff,
+    tooltip--border-color: rgba(0, 0, 0, 0),
+    color-dynamic: #007c82,
+    tooltip-close--color: rgba(0, 0, 0, 0.6),
+    tooltip-close-btn--background: rgba(0, 0, 0, 0),
+    tooltip-close-btn--background--hover: rgba(0, 0, 0, 0.05),
+    tooltip-close-btn--background--active: rgba(0, 0, 0, 0.1),
+    tooltip--color: rgba(0, 0, 0, 0.75),
+    color-hyperlink: #0e777c,
+    color-hyperlink--hover: #0e777c,
+    color-hyperlink--active: #000,
+    color-ghost--hover: rgba(0, 0, 0, 0.05),
+    color-ghost--active: rgba(0, 0, 0, 0.1),
+    toast--background: #fff,
+    toast--border-color: rgba(255, 255, 255, 0),
+    toast--color: rgba(0, 0, 0, 0.75),
+    toast-timer-track--background: rgba(0, 0, 0, 0),
+    toast-timer-value--background: #becdd7,
+    tree-item--background: rgba(255, 255, 255, 0),
+    tree-item--background--hover: rgba(0, 0, 0, 0.05),
+    tree-item--background--active: rgba(0, 0, 0, 0.1),
+    tree-item--background--selected: rgba(50, 160, 160, 0.25),
+    tree-item--background--selected-hover: rgba(41, 132, 132, 0.29),
+    tree-item--background--selected-active: rgba(35, 111, 111, 0.33),
+    tree-item-node-closed-icon--color: rgba(0, 0, 0, 0.75),
+    tree-item-node-open-icon--color: #0e777c,
+    tree-item--color: rgba(0, 0, 0, 0.75),
+    tree-item-icon--color: rgba(0, 0, 0, 0.75),
+    tree-item-status--color: rgba(0, 0, 0, 0.6),
+    table-data-row-alt--background--disabled: rgba(0, 45, 74, 0.03),
+    table--background: rgba(0, 0, 0, 0),
+    table--border-color: rgba(23, 33, 38, 0.15),
+    table--color: rgba(0, 0, 0, 0.75),
+    table-header-row--background: rgba(209, 225, 236, 0.2),
+    table-header-row--border-color: rgba(23, 33, 38, 0.15),
+    table-selection--border-color: #0e777c,
+    table-header-cell--background: rgba(255, 255, 255, 0),
+    table-header-cell--background--hover: rgba(0, 0, 0, 0.05),
+    table-header-cell--background--active: rgba(0, 0, 0, 0.1),
+    table-header-cell--border-color: rgba(0, 0, 0, 0),
+    table-header-cell--border-color--hover: rgba(0, 0, 0, 0),
+    table-header-cell--border-color--active: rgba(0, 0, 0, 0),
+    table-header-cell--color: rgba(0, 0, 0, 0.75),
+    table-header-splitter--background: rgba(65, 95, 117, 0.4),
+    table-header-splitter--background--hover: #0e777c,
+    table-group-splitter--background: rgba(23, 33, 38, 0.15),
+    table-group-splitter--background--hover: #0e777c,
+    table-data-row--background: rgba(255, 255, 255, 0),
+    table-data-row--background--hover: rgba(0, 0, 0, 0.05),
+    table-data-row--background--active: rgba(0, 0, 0, 0.1),
+    table-data-row--background--selected: rgba(50, 160, 160, 0.25),
+    table-data-row--background--disabled: rgba(255, 255, 255, 0),
+    table-data-row--background--selected-hover: rgba(41, 132, 132, 0.29),
+    table-data-row--background--selected-active: rgba(35, 111, 111, 0.33),
+    table-data-row-alt--background--hover: rgba(0, 0, 0, 0.08),
+    table-data-row-alt--background--active: rgba(0, 0, 0, 0.13),
+    table-data-row-alt--background--selected: rgba(44, 142, 142, 0.27),
+    table-data-row-alt--background--selected-hover: rgba(37, 119, 119, 0.31),
+    table-data-row-alt--background--selected-active: rgba(31, 101, 101, 0.34),
+    table-data-row--border-color: rgba(23, 33, 38, 0.15),
+    table-data-cell--background: rgba(0, 0, 0, 0),
+    table-data-cell--background--hover: rgba(0, 0, 0, 0.05),
+    table-data-cell--background--active: rgba(0, 0, 0, 0.1),
+    table-data-cell--background--selected: rgba(50, 160, 160, 0.25),
+    table-data-cell--background--disabled: rgba(255, 255, 255, 0),
+    table-data-cell--background--selected-hover: rgba(41, 132, 132, 0.29),
+    table-data-cell--background--selected-active: rgba(35, 111, 111, 0.33),
+    table-data-cell--border-color: rgba(0, 0, 0, 0),
+    table-data-cell--color: rgba(0, 0, 0, 0.75),
+    table-data-cell--color-disabled: rgba(0, 0, 0, 0.3),
+    table-group-header-row--background: rgba(209, 225, 236, 0.2),
+    table-group-header-row--border-color: rgba(23, 33, 38, 0.15),
+    label--color: rgba(0, 0, 0, 0.6),
+    label--color--hover: rgba(0, 0, 0, 0.75),
+    label--color--active: rgba(0, 0, 0, 0.75),
+    label--color--focus: rgba(0, 0, 0, 0.75),
+    label--color--disabled: rgba(0, 0, 0, 0.3),
+    workflow-step--background: rgba(0, 0, 0, 0),
+    workflow-step--background--hover: rgba(0, 0, 0, 0.05),
+    workflow-step--background--active: rgba(0, 0, 0, 0.1),
+    workflow-step--background--selected: rgba(50, 160, 160, 0.25),
+    workflow-step--background--disabled: rgba(255, 255, 255, 0),
+    workflow-step--color: rgba(0, 0, 0, 0.75),
+    workflow-step--color--disabled: rgba(0, 0, 0, 0.3),
+    workflow-step-icon--background: #fff,
+    workflow-step-icon-default--color: #879baa,
+    workflow-step-icon-default--color--selected: #0e777c,
+    workflow-step-icon-default--color--disabled: rgba(0, 0, 0, 0.3),
+    workflow-step-icon-done--color: #0e777c,
+    workflow-step-icon-done--color--selected: #0e777c,
+    workflow-step-icon-done--color--disabled: rgba(0, 0, 0, 0.3),
+    workflow-step-icon-success--color--disabled: rgba(0, 0, 0, 0.3),
+    workflow-step-icon-warning--color--disabled: rgba(0, 0, 0, 0.3),
+    workflow-step-icon-error--color--disabled: rgba(0, 0, 0, 0.3),
+    chart-1: #00b8a6,
+    chart-2: #007362,
+    chart-2-40: rgba(0, 115, 98, 0.4),
+    chart-3: #00aab3,
+    chart-3-40: rgba(0, 170, 179, 0.4),
+    chart-4: #00afd7,
+    chart-4-40: rgba(0, 175, 215, 0.4),
+    chart-5: #617d8c,
+    chart-5-40: rgba(97, 125, 140, 0.4),
+    chart-6: #1d86dc,
+    chart-6-40: rgba(29, 134, 220, 0.4),
+    chart-7: #2351a4,
+    chart-7-40: rgba(36, 115, 255, 0.4),
+    chart-8: #5581e7,
+    chart-8-40: rgba(85, 129, 231, 0.4),
+    chart-9: #666df4,
+    chart-9-40: rgba(102, 109, 244, 0.4),
+    chart-10: #7c40ff,
+    chart-10-40: rgba(124, 64, 255, 0.4),
+    chart-11: #a12ef3,
+    chart-11-40: rgba(161, 46, 243, 0.4),
+    chart-12: #a207bd,
+    chart-12-40: rgba(162, 7, 189, 0.4),
+    chart-13: #ca5e77,
+    chart-13-40: rgba(202, 94, 119, 0.4),
+    chart-14: #d1706f,
+    chart-14-40: rgba(209, 112, 111, 0.4),
+    chart-15: #dd886a,
+    chart-15-40: rgba(221, 136, 106, 0.4),
+    chart-16: #94947b,
+    chart-16-40: rgba(148, 148, 123, 0.4),
+    chart-17: #909700,
+    chart-17-40: rgba(144, 151, 0, 0.4),
+    chart-1-40: rgba(0, 133, 120, 0.4),
     color-1: #fff,
     input-hint--color: rgba(0, 0, 0, 0.6),
 
