feat(core/kpi): add kpi web component

--- a/packages/core/scss/theme/classic-dark/_sizes.scss
+++ b/packages/core/scss/theme/classic-dark/_sizes.scss
@@ -16,6 +16,7 @@ $classic-dark-sizes: (
   group--border-radius--focus: 0,
   radiobtn--border-thickness: 2px,
   radiobtn--focus--outline-offset: 1px,
+  kpi--border-radius: 4px,
   input--border-radius: 4px,
   input--border-thickness: 1px,
   input--box-shadow: none,
