test(core/kpi): update playwright snapshots

--- a/packages/core/src/components/kpi/test/basic/index.html
+++ b/packages/core/src/components/kpi/test/basic/index.html
@@ -19,9 +19,9 @@ COPYRIGHT (c) Siemens AG 2018-2022 ALL RIGHTS RESERVED.
   <body>
     <div class="example" \>
       <ix-kpi label="Motor speed" value="Nominal"></ix-kpi>
-      <ix-kpi label="Motor speed" value="{122.6}" unit="rpm"></ix-kpi>
-      <ix-kpi label="Motor speed" value="{122.6}" state="alarm"></ix-kpi>
-      <ix-kpi label="Motor speed" value="{122.6}" state="warning"></ix-kpi>
+      <ix-kpi label="Motor speed" value="122.6" unit="rpm"></ix-kpi>
+      <ix-kpi label="Motor speed" value="122.6" state="alarm"></ix-kpi>
+      <ix-kpi label="Motor speed" value="122.6" state="warning"></ix-kpi>
 
       <ix-kpi
         label="Motor speed"
@@ -30,7 +30,7 @@ COPYRIGHT (c) Siemens AG 2018-2022 ALL RIGHTS RESERVED.
       ></ix-kpi>
       <ix-kpi
         label="Motor speed"
-        value="{122.6}"
+        value="122.6"
         unit="rpm"
         state="alarm"
         orientation="vertical"
