fix(core/breadcrumb): fix color and alignment of button
#14

--- a/packages/core/src/components/breadcrumb/breadcrumb.scss
+++ b/packages/core/src/components/breadcrumb/breadcrumb.scss
@@ -10,6 +10,34 @@
 @import 'mixins/hover';
 @import 'mixins/text-truncation';
 
+@mixin crumb-hover($variant) {
+  @include hover {
+    background-color: var(--theme-breadcrumb-#{$variant}--background--hover);
+
+    .crumb-text,
+    .glyph {
+      color: var(--theme-breadcrumb-#{$variant}--color--hover);
+    }
+
+    .crumb-text + .glyph-chevron-right-small {
+      color: var(--theme-breadcrumb-#{$variant}-arrow--color--hover);
+    }
+  }
+
+  @include active {
+    background-color: var(--theme-breadcrumb-#{$variant}--background--active);
+
+    .crumb-text,
+    .glyph {
+      color: var(--theme-breadcrumb-#{$variant}--color--active);
+    }
+
+    .crumb-text + .glyph-chevron-right-small {
+      color: var(--theme-breadcrumb-#{$variant}-arrow--color--active);
+    }
+  }
+}
+
 @mixin breadcrumb($variant) {
   .crumb.#{$variant} {
     background-color: var(--theme-breadcrumb-#{$variant}--background);
@@ -86,6 +114,8 @@
     outline: none;
     cursor: pointer;
 
+    @include crumb-hover('btn');
+
     .crumb-text {
       @include ellipsis;
       display: flex;
@@ -137,10 +167,13 @@
     display: flex;
 
     .more-text-ellipsis {
-      height: $x-large-space;
-      width: $x-large-space;
+      width: 1rem;
       display: inline-block;
       font-weight: $font-weight-bold;
+    }
+
+    .glyph {
+      line-height: unset;
     }
   }
 
