--- a/packages/core/src/components/input-group/input-group.scss
+++ b/packages/core/src/components/input-group/input-group.scss
@@ -1,3 +1,11 @@
+/**
+ * COPYRIGHT (c) Siemens AG
+ *
+ * This source code is licensed under the MIT license found in the
+ * LICENSE file in the root directory of this source tree.
+ *
+ */
+
 :host {
   position: relative;
   display: flex;
