--- a/packages/core/scss/components/_forms.scss
+++ b/packages/core/scss/components/_forms.scss
@@ -132,6 +132,8 @@ textarea {
   background-position: left calc(0.375em + 0.1875rem) center !important;
   padding-right: 0.75rem;
   padding-left: calc(1.5em + 0.75rem);
+  background-size: 18px;
+  background-repeat: no-repeat;
 }
 
 input {
