feat(core/style): add html table

--- a/packages/core/scss/ix.scss
+++ b/packages/core/scss/ix.scss
@@ -39,6 +39,7 @@
 @import './components/shadows';
 @import './components/forms';
 @import './components/input-group';
+@import './components/table';
 
 :root {
   --animate-duration: #{$default-time};
