fix(core/toast): update styling

--- a/packages/core/scss/theme/classic-dark/_sizes.scss
+++ b/packages/core/scss/theme/classic-dark/_sizes.scss
@@ -47,7 +47,13 @@ $classic-dark-sizes: (
     0 0 8px rgba(0, 0, 0, 0.6),
     0 2px 6px #000,
   ),
-  toast--box-shadow: none,
+  toast--border-radius: 4px,
+  toast--border-thickness: 1px,
+  toast--box-shadow: (
+    0 12px 16px rgba(0, 0, 0, 0.6),
+    0 4px 8px rgba(0, 0, 0, 0.6),
+    0 0 2px #000,
+  ),
   flip-tile--border-radius: 0.25rem,
   tab-indicator--height: 0.25rem,
   upload--border-radius: 4px,
