--- a/packages/core/scss/theme/classic-light/_sizes.scss
+++ b/packages/core/scss/theme/classic-light/_sizes.scss
@@ -47,7 +47,13 @@ $classic-light-sizes: (
     0 0 8px rgba(0, 0, 0, 0.1),
     0 2px 6px rgba(0, 0, 0, 0.2),
   ),
-  toast--box-shadow: none,
+  toast--border-radius: 4px,
+  toast--border-thickness: 1px,
+  toast--box-shadow: (
+    0 12px 18px rgba(0, 0, 0, 0.1),
+    0 4px 8px rgba(0, 0, 0, 0.1),
+    0 0 2px rgba(0, 0, 0, 0.1),
+  ),
   flip-tile--border-radius: 0.25rem,
   tab-indicator--height: 0.25rem,
   upload--border-radius: 4px,
