--- a/packages/core/src/components/toast/styles/toast-container.scss
+++ b/packages/core/src/components/toast/styles/toast-container.scss
@@ -7,6 +7,15 @@
  * LICENSE file in the root directory of this source tree.
  */
 
+@import 'common-variables';
+
+#toast-container {
+  @debug 'Toast container';
+  > :not(:last-child) {
+    margin-block-end: $default-space;
+  }
+}
+
 .toast-container {
   display: block;
   position: absolute;
