--- a/packages/core/src/components/toast/test/basic/index.html
+++ b/packages/core/src/components/toast/test/basic/index.html
@@ -24,6 +24,7 @@ SPDX-License-Identifier: MIT
         toast.info = (config) => {
           toastContainer.showToast({
             ...config,
+            autoClose: false,
             type: 'info',
           });
         };
@@ -31,6 +32,7 @@ SPDX-License-Identifier: MIT
         toast.error = (config) => {
           toastContainer.showToast({
             ...config,
+            autoClose: false,
             type: 'error',
           });
         };
@@ -38,6 +40,7 @@ SPDX-License-Identifier: MIT
         toast.success = (config) => {
           toastContainer.showToast({
             ...config,
+            autoClose: false,
             type: 'success',
           });
         };
@@ -45,6 +48,7 @@ SPDX-License-Identifier: MIT
         toast.warning = (config) => {
           toastContainer.showToast({
             ...config,
+            autoClose: false,
             type: 'warning',
           });
         };
