--- a/packages/core/scss/theme/classic-dark/_sizes.scss
+++ b/packages/core/scss/theme/classic-dark/_sizes.scss
@@ -41,6 +41,11 @@ $classic-dark-sizes: (
     0.5rem 0 1rem #000,
   ),
   modal--border-thickness: 1px,
+  modal--box-shadow: (
+    0 12px 16px rgba(0, 0, 0, 0.1),
+    0 4px 8px rgba(0, 0, 0, 0.1),
+    0 0 2px rgba(0, 0, 0, 0.1),
+  ),
   switch-thumb--box-shadow: none,
   tile--border-radius: 0.25rem,
   tile--box-shadow: (
