--- a/packages/core/src/components/tabs/test/basic/index.html
+++ b/packages/core/src/components/tabs/test/basic/index.html
@@ -14,10 +14,39 @@ SPDX-License-Identifier: MIT
     <title>Stencil Component Starter</title>
   </head>
   <body>
-    <ix-tabs selected="1">
-      <ix-tab-item>Tab 1</ix-tab-item>
-      <ix-tab-item>Tab 2</ix-tab-item>
-      <ix-tab-item>Tab 3</ix-tab-item>
+    <ix-tabs small layout='stretched'>
+      <ix-tab-item><ix-icon name='success'></ix-icon></ix-tab-item>
+      <ix-tab-item><ix-icon name='tree'></ix-icon></ix-tab-item>
+      <ix-tab-item><ix-icon name='maintenance'></ix-icon></ix-tab-item>
+      <ix-tab-item disabled><ix-icon name='sound-loud'></ix-icon></ix-tab-item>
+      <ix-tab-item ><ix-icon name='hierarchy'></ix-icon></ix-tab-item>
+      <ix-tab-item disabled><ix-icon name='calendar-settings'></ix-icon></ix-tab-item>
+    </ix-tabs>
+
+    <ix-tabs placement='top' layout='stretched'>
+      <ix-tab-item>Example</ix-tab-item>
+      <ix-tab-item>Example</ix-tab-item>
+      <ix-tab-item>Example</ix-tab-item>
+      <ix-tab-item>Example</ix-tab-item>
+      <ix-tab-item>Example</ix-tab-item>
+      <ix-tab-item>Example</ix-tab-item>
+    </ix-tabs>
+
+    <ix-tabs>
+      <ix-tab-item>Example</ix-tab-item>
+      <ix-tab-item>Example</ix-tab-item>
+      <ix-tab-item>Example</ix-tab-item>
+      <ix-tab-item>Example</ix-tab-item>
+      <ix-tab-item>Example</ix-tab-item>
+      <ix-tab-item>Example</ix-tab-item>
+    </ix-tabs>
+    <ix-tabs >
+      <ix-tab-item>Example<ix-icon name='success'></ix-icon></ix-tab-item>
+      <ix-tab-item>Example<ix-icon name='tree'></ix-icon></ix-tab-item>
+      <ix-tab-item>Example<ix-icon name='maintenance'></ix-icon></ix-tab-item>
+      <ix-tab-item disabled>Example<ix-icon name='sound-loud'></ix-icon></ix-tab-item>
+      <ix-tab-item >Example<ix-icon name='hierarchy'></ix-icon></ix-tab-item>
+      <ix-tab-item disabled>Example<ix-icon name='calendar-settings'></ix-icon></ix-tab-item>
     </ix-tabs>
     <script src="http://127.0.0.1:8080/scripts/e2e/load-e2e-runtime.js"></script>
   </body>
