fix(documentation/css): display pages with 100% width

--- a/packages/documentation/src/css/custom.css
+++ b/packages/documentation/src/css/custom.css
@@ -65,10 +65,20 @@ body {
   max-width: 100%;
 }
 
+@media (min-width: 1440px) {
+  .container {
+    max-width: 100% !important;
+  }
+  .col {
+    max-width: 100% !important;
+  }
+}
+
 @media (max-width: 997px) {
   .container {
     margin-top: 0;
     margin-left: 0;
+    max-width: 100% !important;
   }
   .col {
     max-width: 100% !important;
