fix(core/application-header): align logo in center position

--- a/packages/core/src/components/application-header/application-header.scss
+++ b/packages/core/src/components/application-header/application-header.scss
@@ -27,7 +27,8 @@
   }
 
   .logo {
-    display: inline-block;
+    display: inline-flex;
+    align-items: center;
     position: relative;
     height: 32px;
     overflow: hidden;
