fix(core/menu-item): prevent text selection

--- a/packages/core/src/components/menu-item/menu-item.scss
+++ b/packages/core/src/components/menu-item/menu-item.scss
@@ -76,6 +76,7 @@ ix-menu-item {
     @include ellipsis;
     color: var(--theme-nav-item-primary--color);
     margin: 0 1.25rem;
+    user-select: none;
   }
 
   &.active,
